# scigetup

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scigetup/: __init__.py  __main__.py  app.py
src/scigetup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_main.py  test_software.json
