[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scigetup"
version = "0.0.1"
authors = [
  { name="scigetorg", email="scigetorg@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/scigetorg/scigetup"
"Bug Tracker" = "https://github.com/scigetorg/scigetup/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
